# private-hackage-uploader.hs

./: CHANGELOG.md  README.md  private-hackage-uploader.hs.cabal
x/: Main.hs
